@@ -113,7 +113,7 @@ Disassembly of section .text:
  1a4:	d5 a6 00 00 
  1a8:	00 ce 16 8e 	R7.L = LSHIFT R6.L BY R2.L \|\| R5 = W\[P2 \+ 0x14\] \(Z\) \|\| NOP;
  1ac:	95 a6 00 00 
- 1b0:	02 ce 1c 8a 	R5 = SHIFT R4 BY R3.L \|\| R4 = W\[P2 \+ 0x12\] \(Z\) \|\| NOP;
+ 1b0:	02 ce 1c 8a 	R5 = LSHIFT R4 BY R3.L \|\| R4 = W\[P2 \+ 0x12\] \(Z\) \|\| NOP;
  1b4:	54 a6 00 00 
  1b8:	03 ce 30 40 	A0 = LSHIFT A0 BY R6.L \|\| R5 = W\[P2 \+ 0x10\] \(Z\) \|\| NOP;
  1bc:	15 a6 00 00 
