@@ -386,14 +386,14 @@ Disassembly of section .text:
  5e8:	81 c6 2a 86 	R3 = R2 << 0x5 \(V\);
  5ec:	81 c6 2c 8a 	R5 = R4 << 0x5 \(V\);
  5f0:	81 c6 2e 8e 	R7 = R6 << 0x5 \(V\);
- 5f4:	01 c6 11 80 	R0 = SHIFT R1 BY R2.L \(V\);
- 5f8:	01 c6 2c 86 	R3 = SHIFT R4 BY R5.L \(V\);
- 5fc:	01 c6 07 8c 	R6 = SHIFT R7 BY R0.L \(V\);
- 600:	01 c6 1a 82 	R1 = SHIFT R2 BY R3.L \(V\);
- 604:	01 c6 35 88 	R4 = SHIFT R5 BY R6.L \(V\);
- 608:	01 c6 08 8e 	R7 = SHIFT R0 BY R1.L \(V\);
- 60c:	01 c6 23 84 	R2 = SHIFT R3 BY R4.L \(V\);
- 610:	01 c6 3e 8a 	R5 = SHIFT R6 BY R7.L \(V\);
+ 5f4:	01 c6 11 80 	R0 = LSHIFT R1 BY R2.L \(V\);
+ 5f8:	01 c6 2c 86 	R3 = LSHIFT R4 BY R5.L \(V\);
+ 5fc:	01 c6 07 8c 	R6 = LSHIFT R7 BY R0.L \(V\);
+ 600:	01 c6 1a 82 	R1 = LSHIFT R2 BY R3.L \(V\);
+ 604:	01 c6 35 88 	R4 = LSHIFT R5 BY R6.L \(V\);
+ 608:	01 c6 08 8e 	R7 = LSHIFT R0 BY R1.L \(V\);
+ 60c:	01 c6 23 84 	R2 = LSHIFT R3 BY R4.L \(V\);
+ 610:	01 c6 3e 8a 	R5 = LSHIFT R6 BY R7.L \(V\);
  614:	06 c4 08 0e 	R7 = MAX \(R1, R0\) \(V\);
  618:	06 c4 0a 00 	R0 = MAX \(R1, R2\) \(V\);
  61c:	06 c4 25 06 	R3 = MAX \(R4, R5\) \(V\);
